# dig-did

./: .u3-wip  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  SPEC.md
.github/workflows/: publish.yml  release.yml
src/: attest.rs  context.rs  create.rs  did_string.rs  error.rs  hydrate.rs  launch.rs  lib.rs  lineage.rs  melt.rs  recovery.rs  resolve.rs  sign.rs  transfer.rs  types.rs  update.rs
tests/: golden_create.rs
tests/fixtures/: create_simple_did.funding_spend.hex  create_simple_did.launcher_spend.hex  create_simple_did.settle_spend.hex
