# dig-did — the DIG Network canonical Chia DID expert crate.
#
# A pure, key-free, network-free SpendBundle-builder library for Chia Decentralized Identifiers
# (DIDs). dig-did constructs the exact CoinSpends for every DID lifecycle operation and reports the
# exact signatures a caller must produce — it NEVER holds a secret key, NEVER signs, and NEVER
# touches the network. The consumer signs the reported messages, assembles the SpendBundle, and
# broadcasts. See SPEC.md for the normative contract.
#
# U1 (this milestone) ships the crate foundation: the type surface (`Did`, `DidInfo`, `DidSpend`,
# `Owner`), the error taxonomy, the inner-spend construction helpers, and the load-bearing signing
# boundary (`required_signatures`). The DID operations (create/update/recover/transfer/launch/…)
# arrive in their own units against this foundation — their modules are declared as doc-only stubs
# so the layout is final.
[package]
name = "dig-did"
version = "0.4.0"
edition = "2021"
rust-version = "1.75.0"
license = "Apache-2.0 OR MIT"
description = "The DIG Network canonical Chia DID expert crate: a pure, key-free, network-free SpendBundle-builder for Chia Decentralized Identifiers. Builds the exact CoinSpends for every DID lifecycle operation and reports the exact signatures a caller must produce — never holds a key, never signs, never broadcasts."
repository = "https://github.com/DIG-Network/dig-did"
readme = "README.md"
keywords = ["dig", "chia", "did", "identity", "singleton"]
categories = ["cryptography::cryptocurrencies", "api-bindings"]

[lib]
# rlib for native consumers; cdylib so a later unit can compile a wasm façade over the same crate.
crate-type = ["cdylib", "rlib"]

[dependencies]
# The chia-wallet-sdk umbrella is the byte-source-of-truth for every DID puzzle, layer, and spend
# (INV-4). Pinned to the 0.30 family the whole DIG on-chain line rides (chia-protocol 0.26). We
# consume the DID primitive, the launcher, the standard p2 layer, the spend context, and the pure
# signing calculator through it so the chia-* tree resolves to ONE coherent version set.
chia-wallet-sdk = "0.30"
# Direct type deps, pinned to EXACTLY the versions chia-wallet-sdk 0.30 resolves to (a mismatch is a
# hard cargo error). chia-protocol/chia-puzzle-types carry wire types the umbrella prelude does not
# re-export (`Proof`, `LineageProof`); clvm-traits carries the CLVM (de)serialization traits.
chia-protocol = "0.26"
chia-puzzle-types = "0.26"
clvm-traits = "0.26"
# Needed directly for `tree_hash` on a caller-supplied custom inner puzzle (`Owner::Custom`) — the
# umbrella crate does not re-export it.
clvm-utils = "0.26"
# The singleton launcher puzzle hash (`SINGLETON_LAUNCHER_HASH`) that terminates the lineage-proof
# walk (SPEC §5) — the same const the SDK's `SingletonLayer` uses, so dig-did recognizes a launcher
# coin byte-identically. Pinned to the version chia-wallet-sdk 0.30 resolves to.
chia-puzzles = "0.20"
# The canonical `did:chia:` bech32m codec (`Address`) — the same one dig-identity and chip35 use, so
# a DID string byte-agrees ecosystem-wide (SPEC §2.3/§9). The umbrella crate does not re-export it.
chia-sdk-utils = "0.30"
# The crate error taxonomy (SPEC §6). thiserror 2 matches the sibling DIG crates.
thiserror = "2"
# The ONE canonical `ChainSource` provider interface (the trait + `SingletonLineage` + `CoinRecord`),
# extracted from dig-did's original local trait and published to crates.io so every DIG consumer
# depends on a single non-drifting contract (#1240). dig-did consumes the trait and re-exports it so
# the `dig_did::ChainSource` path is preserved (INV-4 for the chain-read seam).
dig-chainsource-interface = "0.1"

[dev-dependencies]
# The interface's in-memory `MockChainSource` (the `testing` feature) drives the fail-closed and
# unlaunched/melted resolve paths without a live network.
dig-chainsource-interface = { version = "0.1", features = ["testing"] }
# The in-process Chia Simulator + BLS keypair helpers for building real coin spends in tests.
chia-sdk-test = "0.30"
# Hex assertions on computed signature messages / coin ids in tests.
hex = "0.4"
# Ergonomic `Result<_, anyhow::Error>` test bodies (the SDK's own test suite uses the same idiom).
anyhow = "1"
# `Streamable::to_bytes` — serializes a `CoinSpend` to its canonical wire bytes for the golden-fixture
# test (SPEC §8).
chia-traits = "0.26"
# `SecretKey::from_seed` — a deterministic (never hard-coded-literal) BLS keypair for the golden
# fixture and other tests that need a stable key across runs.
chia-bls = "0.26"
